org.codehaus.sonar:sonar-testing-harness 3.3-->5.1

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
       <dependency>
         <groupId>org.codehaus.sonar</groupId>
         <artifactId>sonar-testing-harness</artifactId>
-        <version>${sonar.version}</version>
+        <version>5.1</version>
       </dependency>
 
       <dependency>
